[package]
authors = ["Dario Nieuwenhuis <dirbaio@dirbaio.net>"]
edition = "2018"
readme = "README.md"
name = "flash-algo"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.0"
flash-algorithm = { version = "0.4.0", default-features = false, features = [
    "panic-handler",
] }

[features]
# Keep extra metadata in the final binary that probe-rs doesn't strictly need.
# Other tools use of these datastructures: probe-rs' target-gen, pyocd, jlink
cmsis-pack-compat = []

# this lets you use `cargo fix`!
[[bin]]
name = "flash-algo"
test = false
bench = false

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 's'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
